29) kernel: ralink_raeth: add support MT7621 'clause 45' MDIO control.<br>
30) kernel: ralink_raeth: fix dump MT7621/MT7530 EPHY registers.<br>
31) kernel: ralink_raeth: move early ESW init to global unit.<br>
32) kernel: ralink_raeth: add EEE-related functions, disable EEE by default, fix disable EEE on MT7620 ESW, improve EEE support on MT7621/MT7530.<br>
33) kernel: ralink_raeth: add support to disable any EPHY.<br>
34) kernel: ralink_raeth: improve MT7621 performance on TX path.<br>
35) kernel: exfat driver: upstream updates.<br>
36) kernel: driver core: fix race with userland in device_add().<br>
37) kernel: usb: fix use-after-free bug in usb_hcd_unlink_urb().<br>
38) kernel: usb: serial: fix potential use-after-free after failed probe.<br>
39) kernel: usb: xhci: allocate correct amount of scratchpad buffers.<br>
40) kernel: usb: xhci: fix reporting of 0-sized URBs in control endpoint.<br>
41) kernel: usb: xhci: handle Config Error Change (CEC) in xhci driver.<br>
42) kernel: netfilter: nf_nat_h323: fix crash in nf_ct_unlink_expect_report().<br>
43) kernel: netfilter: nf_ct_sip: extend RCU read lock in set_expected_rtp_rtcp().<br>
44) kernel: netfilter: xt_socket: fix a stack corruption bug.<br>
45) kernel: netfilter: nf_ct_sip: support Cisco 7941/7945 IP phones.<br>
46) kernel: net: pppoe: drop pppoe device in pppoe_unbind_sock_work.<br>
47) kernel: net: ipt_accounting portted to 3.4 kernel.<br>
48) kernel: net: sysctl_net_core: check SNDBUF and RCVBUF for min length.<br>
49) kernel: net: tcp: update reordering first before detecting loss.<br>
50) kernel: net: tcp: set SOCK_NOSPACE under memory pressure.<br>
<br>
<br>
<b>TODO:</b><br>
1) full russian ui (work end ~80%).<br>
2) port support l2tp/pptp hardware NAT offload (really needed? in sdk very ugly code).<br>
3) need add davfs2 webui for managment online disk drives (as yandex disk and others very slow, really need?).<br>
4) need add irqbalance in WebUI (in last stage of 7621 dev).<br>
<br>
<br>
<br>